[➕] Add many files on the apprentice group

--- a/IDV/apprentice/paper-exam/C2WK-paper_exam.html
+++ b/IDV/apprentice/paper-exam/C2WK-paper_exam.html
@@ -7,15 +7,15 @@
 </thead>
 <tbody><tr>
 <td>Correction</td>
-<td>Soutenance</td>
+<td>Exam</td>
 </tr>
 <tr>
 <td>Durée</td>
 <td>1 h</td>
 </tr>
 <tr>
-<td>Effectif</td>
-<td>Seul</td>
+<td>Effective</td>
+<td>Alone</td>
 </tr>
 </tbody></table>
 </div><div class="panel-heading panel-project">Consignes</div><div class="panel-body"><p>You are tasked with creating a number guessing game in TypeScript. The program generates a random number between 1 and 100. The user needs to guess the number, and the program provides feedback on whether the guess is too high, too low, or correct. The game keeps track of the user's attempts and displays the total number of tries when the user wins.</p>
