--- a/IDV/apprentice/books/C2WK-books.html
+++ b/IDV/apprentice/books/C2WK-books.html
@@ -15,7 +15,7 @@
 </tr>
 <tr>
 <td>Required file</td>
-<td>books.json</td>
+<td>books.csv</td>
 </tr>
 <tr>
 <td>Correction</td>
@@ -30,9 +30,9 @@
 <td>Alone</td>
 </tr>
 </tbody></table>
-</div><div class="panel-heading panel-project">Instructions</div><div class="panel-body"><p>You are tasked with creating a number guessing game in TypeScript. The program generates a random number between 1 and 100. The user needs to guess the number, and the program provides feedback on whether the guess is too high, too low, or correct. The game keeps track of the user's attempts and displays the total number of tries when the user wins.</p>
+</div><div class="panel-heading panel-project">Instructions</div><div class="panel-body"><p>You must realize all steps. Good luck !</p>
 <div class="panel-heading undefined">Step 1</div><div class="panel-body"><ul>
-<li>Load data from an existing JSON file <code>(authors.json)</code>.</li>
+<li>Load data from an existing CSV file <code>(books.csv)</code>.</li>
 <li>Check if the file exists before attempting to read it (if the file is missing or corrupted, display an appropriate error message).</li>
 </ul>
 </div><div class="panel-heading undefined">Step 2</div><div class="panel-body"><ul>
@@ -67,15 +67,14 @@
 <li>id: Automatically generate a unique number (max(id) + 1).</li>
 <li>name: The author's name (required).<br>works: A list of works (accept comma-separated input and convert it into an array).</li>
 <li>genres: A list of genres (similar to works).<br>birthYear: The year of birth (validate it as a number).</li>
-<li>deathYear: The year of death (optional, validate that it is greater than birthYear</li>
+<li>deathYear: The year of death (optional, validate that it is greater than birthYear)</li>
 <li>Add the new author to the main array.</li>
 </ul>
 </div><div class="panel-heading undefined">Step 3 - 5</div><div class="panel-body"><ul>
-<li>Use JSON.stringify to convert the updated data back into a JSON string.</li>
-<li>Save the updated data to the file (authors.json), overwriting the old content.</li>
+<li>Save the updated data to the file (books.csv), overwriting the old content.</li>
 <li>Display a confirmation message upon successful save.</li>
 </ul>
 </div><div class="panel-heading undefined">Step 3 - 6</div><div class="panel-body"><ul>
-<li>Add an option that allows the user to quit the program without modifying the JSON file.</li>
+<li>Add an option that allows the user to quit the program without modifying the CSV file.</li>
 </ul>
 </div></div></div></body></html>
