--- a/IDV/apprentice/paper-exam/C2WK-paper_exam.html
+++ b/IDV/apprentice/paper-exam/C2WK-paper_exam.html
@@ -20,10 +20,10 @@
 </tbody></table>
 </div><div class="panel-heading panel-project">Consignes</div><div class="panel-body"><p>You are tasked with creating a number guessing game in TypeScript. The program generates a random number between 1 and 100. The user needs to guess the number, and the program provides feedback on whether the guess is too high, too low, or correct. The game keeps track of the user's attempts and displays the total number of tries when the user wins.</p>
 <div class="panel-heading undefined">Step 1</div><div class="panel-body"><ul>
-<li>Generate a random integer between 1 and 100  </li>
+<li>Generate a random integer between 1 and 100 on a function generateRandomNumber.</li>
 </ul>
 <div class="code-toolbar"><pre class=" language-markup"><code class=" language-markup">Math.floor(Math.random() * 100 + 1);</code></pre><div class="toolbar"><div class="toolbar-item"><button>Copy</button></div></div></div></div><div class="panel-heading undefined">Step 2</div><div class="panel-body"><ul>
-<li>Use readline to use pompt</li>
+<li>Use readline to use pompt on a function askQuestion.</li>
 </ul>
 <div class="code-toolbar"><pre class=" language-markup"><code class=" language-markup">const readline = require("readline");
 
