[➕] Add and [📝] Update many subjects

--- a/IDV/html/next_project/C2WK-the_next_html_project.html
+++ b/IDV/html/next_project/C2WK-the_next_html_project.html
@@ -1,45 +1,98 @@
-<html><head><title>C2WK - The next Html project</title><link rel="stylesheet" href="https://dl.etna-alternance.net/sujets/prism.css"><link rel="stylesheet" href="https://dl.etna-alternance.net/sujets/sujet.css"><script type="text/javascript" src="https://dl.etna-alternance.net/sujets/prism.js"></script><script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/1.7.1/clipboard.min.js"></script><script type="text/javascript" src="https://kit.fontawesome.com/2128552f47.js"></script><meta charset="UTF-8"></head><body><div class="panel-heading panel-header">C2WK - The next Html project</div><div class="panel-heading panel-module">Modalities</div><div class="panel-body"><table>
-<thead>
-<tr>
-<th>Type</th>
-<th>Description</th>
-</tr>
-</thead>
-<tbody><tr>
-<td>Folder - HTML</td>
-<td>booki/</td>
-</tr>
-<tr>
-<td>Folder - CSS</td>
-<td>style/</td>
-</tr>
-<tr>
-<td>exam</td>
-<td>orals</td>
-</tr>
-<tr>
-<td>Duration</td>
-<td>1 days</td>
-</tr>
-<tr>
-<td>Participants</td>
-<td>Individual</td>
-</tr>
-</tbody></table>
-</div><div class="panel-heading panel-objective">Objectifs</div><div class="panel-body"><ul>
-<li>You must create an HTML and SCSS landing page with tailewind</li>
-</ul>
-</div><div class="panel-heading panel-info">Info</div><div class="panel-body"><ul>
-<li><a target="_blank" href="https://fontawesome.com/" title="undefined">https://fontawesome.com/</a> it's the link to add icons on the website</li>
-<li><a target="_blank" href="https://tailwindcss.com/" title="undefined">https://tailwindcss.com/</a> </li>
-</ul>
-</div><div class="panel-heading panel-project">Tasks</div><div class="panel-body"><ul>
-<li>Your create landing page about ETNA</li>
-</ul>
-<div class="panel-heading panel-forbidden">Forbiden</div><div class="panel-body"><ul>
-<li>Do not use pixel units; use only rem and em units.</li>
-<li>Avoid overusing IDs.</li>
-<li>Pay attention to the naming of your tags.</li>
-<li>Do not rely solely on the div tag, use semantic tags where appropriate.</li>
-</ul>
-</div></div></body></html>
+<html>
+  <head>
+    <title>C2WK - The next Html project</title>
+    <link
+      rel="stylesheet"
+      href="https://dl.etna-alternance.net/sujets/prism.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://dl.etna-alternance.net/sujets/sujet.css"
+    />
+    <script
+      type="text/javascript"
+      src="https://dl.etna-alternance.net/sujets/prism.js"
+    ></script>
+    <script
+      type="text/javascript"
+      src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/1.7.1/clipboard.min.js"
+    ></script>
+    <script
+      type="text/javascript"
+      src="https://kit.fontawesome.com/2128552f47.js"
+    ></script>
+    <meta charset="UTF-8" />
+  </head>
+  <body>
+    <div class="panel-heading panel-header">C2WK - The next Html project</div>
+    <div class="panel-heading panel-module">Modalities</div>
+    <div class="panel-body">
+      <table>
+        <thead>
+          <tr>
+            <th>Type</th>
+            <th>Description</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Dépôt</td>
+            <td>$$RENDU$$</td>
+          </tr>
+          <tr>
+            <td>exam</td>
+            <td>orals</td>
+          </tr>
+          <tr>
+            <td>Duration</td>
+            <td>1 days</td>
+          </tr>
+          <tr>
+            <td>Participants</td>
+            <td>Individual</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+    <div class="panel-heading panel-objective">Objectifs</div>
+    <div class="panel-body">
+      <ul>
+        <li>You must create an HTML and SCSS landing page with tailewind</li>
+      </ul>
+    </div>
+    <div class="panel-heading panel-info">Info</div>
+    <div class="panel-body">
+      <ul>
+        <li>
+          <a target="_blank" href="https://fontawesome.com/" title="undefined"
+            >https://fontawesome.com/</a
+          >
+          it's the link to add icons on the website
+        </li>
+        <li>
+          <a target="_blank" href="https://tailwindcss.com/" title="undefined"
+            >https://tailwindcss.com/</a
+          >
+        </li>
+      </ul>
+    </div>
+    <div class="panel-heading panel-project">Tasks</div>
+    <div class="panel-body">
+      <ul>
+        <li>Your create landing page about ETNA</li>
+      </ul>
+      <div class="panel-heading panel-forbidden">Forbiden</div>
+      <div class="panel-body">
+        <ul>
+          <li>Do not use pixel units; use only rem and em units.</li>
+          <li>Avoid overusing IDs.</li>
+          <li>Pay attention to the naming of your tags.</li>
+          <li>
+            Do not rely solely on the div tag, use semantic tags where
+            appropriate.
+          </li>
+        </ul>
+      </div>
+    </div>
+  </body>
+</html>
