[➕] Add IDV subjects

--- a/IDV/html/booki/C2WK-booki.html
+++ b/IDV/html/booki/C2WK-booki.html
@@ -40,8 +40,8 @@
             <td>$$RENDU$$</td>
           </tr>
           <tr>
-            <td>exam</td>
-            <td>orals</td>
+            <td>Exam</td>
+            <td>Exam</td>
           </tr>
           <tr>
             <td>Duration</td>
